--- a/log.html
+++ b/log.html
@@ -2081,13 +2081,13 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,33],[],[[4,0,0,[],[1,15,15],[[0,5,6,0,7,8,9,0,[1,15,0],[[0,10,6,0,11,12,0,0,[1,15,0],[]],[15,2,13]]],[0,14,6,0,15,16,0,0,[1,15,15],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,34],[],[[4,0,0,[],[1,29,1],[[0,5,6,0,7,8,9,0,[1,30,0],[[0,10,6,0,11,12,0,0,[1,30,0],[]],[30,2,13]]],[0,14,6,0,15,16,0,0,[1,30,0],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Exercicio 19","*C:\\Users\\Carlos Eduardo\\Desktop\\exercicios_logica\\exercicio_19.robot","*exercicio_19.robot","*Verificar numero par ou impar","*Run Keyword If","*BuiltIn","*<p>Runs the given keyword with the given arguments, if <code>condition\x3c/code> is true.\x3c/p>","*${numero} % 2 == 0    Set Variable    par    ELSE    Set Variable    impar","*${resultado}","*Set Variable","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*par","*${resultado} = par","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*\\nO número é ${resultado}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Exercicio 19","*C:\\Users\\Carlos Eduardo\\Desktop\\exercicios_logica\\exercicio_19.robot","*exercicio_19.robot","*Verificar numero par ou impar","*Run Keyword If","*BuiltIn","*<p>Runs the given keyword with the given arguments, if <code>condition\x3c/code> is true.\x3c/p>","*${numero} % 2 == 0    Set Variable    par    ELSE    Set Variable    impar","*${resultado}","*Set Variable","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*impar","*${resultado} = impar","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*\\nO número é ${resultado}"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio 19","name":"Exercicio 19","pass":1,"skip":0}]];
@@ -2096,10 +2096,10 @@ window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","p
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1707841106672;
+window.output["baseMillis"] = 1707854319771;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 40;
+window.output["generated"] = 42;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
